# efx-motion-editor

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPECS.md  package-lock.json  package.json  pnpm-lock.yaml  repomix.config.json  skills-lock.json
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json  settings.local.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-code-reviewer.md  gsd-codebase-mapper.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-doc-writer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-integration-checker.md  gsd-intel-updater.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-auditor.md  gsd-ui-checker.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/: gsd-audit-milestone.md  gsd-audit-uat.md  gsd-capture.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-extract-learnings.md  gsd-fast.md  gsd-forensics.md  gsd-graphify.md  gsd-help.md  gsd-manager.md  gsd-map-codebase.md  gsd-mempalace-capture.md  gsd-new-milestone.md  gsd-new-project.md  gsd-next.md  gsd-onboard.md  gsd-pause-work.md  gsd-phase.md  gsd-plan-phase.md  gsd-review.md  gsd-secure-phase.md  gsd-settings.md  gsd-ship.md  gsd-spec-phase.md  gsd-spike.md  gsd-stats.md  gsd-surface.md  gsd-undo.md  gsd-update.md
.claude/gsd-migration-journal/: 2026-06-08T08-24-22-307Z-585a69ef6ae1169d.json
.claude/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-config-reload.js  gsd-context-monitor.js  gsd-cursor-post-tool.js  gsd-cursor-pre-tool.js  gsd-cursor-session-start.js  gsd-cursor-stop.js  gsd-cursor-subagent-start.js  gsd-cursor-subagent-stop.js  gsd-ensure-canonical-path.js  gsd-graphify-update.sh  gsd-phase-boundary.sh  gsd-prompt-guard.js  gsd-read-guard.js  gsd-read-injection-scanner.js  gsd-session-state.sh  gsd-statusline.js  gsd-update-banner.js  gsd-validate-commit.sh  gsd-windsurf-pre-command.js  gsd-windsurf-pre-write.js  gsd-workflow-guard.js  gsd-worktree-path-guard.js
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.codex/agents/: gsd-advisor-researcher.md  gsd-advisor-researcher.toml  gsd-ai-researcher.md  gsd-ai-researcher.toml  gsd-assumptions-analyzer.md  (+37 more)
.collaborator/: config.json
.planning/: INIT_STATE.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
Application/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
Application/src-tauri/: Cargo.toml  tauri.conf.json
Application/src-tauri/capabilities/: default.json
Application/src-tauri/src/: lib.rs  main.rs
Application/src-tauri/src/commands/: config.rs  export.rs  image.rs  mod.rs  project.rs
Application/src-tauri/src/models/: image.rs  mod.rs  project.rs  sequence.rs
Application/src-tauri/src/services/: ffmpeg.rs  image_pool.rs  mod.rs  project_io.rs  tablet.rs
Mockup/: efx-motion-editor.pen
app/: index.html  package.json  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  physics-paint.json
app/src-tauri/src/: lib.rs  script_library_test_support.rs
app/src-tauri/src/commands/: config.rs  mod.rs  project.rs  script_library.rs
app/src-tauri/src/models/: project.rs
app/src-tauri/src/services/: ffmpeg.rs  image_pool.rs  mod.rs  project_io.rs  script_library.rs  tablet.rs
app/src-tauri/tests/: script_library_filesystem.rs  script_library_lifecycle.rs  script_library_schema.rs
(+2433 files in other folders)
