[package]
name = "efx-motion-editor"
version = "0.1.0"
description = "EFX Motion Editor"
authors = ["EFX Lab"]
edition = "2021"

[lib]
name = "efx_motion_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "tiff"] }
uuid = { version = "1", features = ["v4"] }
