[package]
name = "efx-motion-editor"
version = "0.1.0"
description = "EFX Motion Editor"
authors = ["EFX Lab"]
edition = "2021"

[lib]
name = "efx_motion_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "tiff"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3.2"
serde_yaml = "0.9"
tauri-plugin-notification = "2.3.3"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3", features = ["NSObject", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder"] }
block2 = "0.6"
dispatch = "0.2"
